Mixed Playground/force-app/main/default/objects/Game_Result__c/Game_Result__c.object-meta.xml
<CustomObject>
    <label>Game Result</label>
    <nameField>
        <label>Game Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>