Mixed Playground/force-app/main/default/objects/Game_Result__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Game Results</relationshipLabel>
    <relationshipName>Game_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>