Mixed Playground/force-app/main/default/objects/Game_Result__c/fields/Won_Jackpot__c.field-meta.xml
<CustomField>
    <fullName>Won_Jackpot__c</fullName>
    <label>Won Jackpot?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>